--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2698,7 +2698,7 @@ input, select, textarea {
 	}
 
 	header.major h2:after {
-		background-color: rgba(255, 255, 255, 0.35);
+		background: linear-gradient(to right, #e37682, #5f4d93, #8cc9f0);
 	}
 
 /* Table */
