--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3903,3 +3903,9 @@ header.major {
     border-bottom: 3px solid #6ca0dc; /* Add a colorful underline */
     padding-bottom: 10px;
 }
+
+.dashed-underline {
+    text-decoration: none; /* Remove default underline */
+    border-bottom: 2px dashed #555; /* Dashed underline specifically for this text */
+    color: inherit; /* Keep link color same as text */
+}
