--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3953,3 +3953,9 @@ nav#nav a.active {
     font-weight: bold;
 }
 
+@media screen and (max-width: 768px) {
+    nav#nav ul {
+        flex-direction: column; /* Stacks items vertically */
+        align-items: center;
+    }
+}
