--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3213,16 +3213,14 @@ input, select, textarea {
 		transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
 		background-color: #ffffff;
 		color: #636363;
-		position: absolute;
-		width: 64em;
-		max-width: calc(100% - 4em);
-		padding: 1em;
-		background-color: #f7f7f7;
-		border-top-left-radius: 0.25em;
-		border-top-right-radius: 0.25em;
-		cursor: default;
-		text-align: center;
-	}
+		position: fixed;
+    		top: 0;
+    		width: 100%;
+    		padding: 0;
+    		background-color: #333;
+    		z-index: 1000;
+    		box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+		}
 
 		#nav input, #nav select, #nav textarea {
 			color: #636363;
@@ -3258,20 +3256,21 @@ input, select, textarea {
 		}
 
 		#nav ul {
-			margin: 0;
-			padding: 0;
-			list-style: none;
-		}
+			display: flex;
+    			justify-content: space-around;
+    			align-items: center;
+    			margin: 0;
+    			padding: 10px 0;
+    			list-style: none;
+			}
 
 			#nav ul li {
 				-moz-transition: margin 0.2s ease;
 				-webkit-transition: margin 0.2s ease;
 				-ms-transition: margin 0.2s ease;
 				transition: margin 0.2s ease;
-				display: inline-block;
-				margin: 0 0.35em;
-				padding: 0;
-				vertical-align: middle;
+				margin: 0;
+				padding: 0 10px;
 			}
 
 				#nav ul li a {
@@ -3279,12 +3278,11 @@ input, select, textarea {
 					-webkit-transition: font-size 0.2s ease;
 					-ms-transition: font-size 0.2s ease;
 					transition: font-size 0.2s ease;
-					display: inline-block;
-					height: 2.25em;
-					line-height: 2.25em;
-					padding: 0 1.25em;
-					border: 0;
-					border-radius: 8px;
+					    text-decoration: none;
+    					color: white;
+    					padding: 10px 20px;
+    					display: block;
+    					transition: background-color 0.3s ease;
 					box-shadow: inset 0 0 0 1px transparent;
 				}
 
@@ -3315,11 +3313,17 @@ input, select, textarea {
 					font-size: 0.9em;
 				}
 
-		@media screen and (max-width: 736px) {
+@media screen and (max-width: 768px) {
+    #nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
 
-			#nav {
-				display: none;
-			}
+    #nav ul li a {
+        padding: 15px 0;
+    }
+}
+
 
 				#nav + #main {
 					padding-top: 0;
