--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3257,10 +3257,10 @@ input, select, textarea {
 
 		#nav ul {
 			display: flex;
-    			justify-content: center;
+    			justify-content: space-around;
     			align-items: center;
     			margin: 0;
-    			padding: 0;
+    			padding: 10px 0;
     			list-style: none;
 			}
 
